# claw-review

./: .gitignore  README.md  REVIEW.md  action.yml  pyproject.toml
.claude/: settings.json
.review/: settings.toml
src/review_agent/: __init__.py  cli.py  coordinator.py  engine.py  registry.py  repl.py  tool.py  types.py
src/review_agent/commands/: __init__.py  builtin.py  registry.py
src/review_agent/findings/: __init__.py  dedupe.py  model.py  store.py
src/review_agent/findings/format/: __init__.py  github.py  json_fmt.py  markdown.py  sarif.py
src/review_agent/hooks/: __init__.py  runner.py
src/review_agent/llm/: groq_client.py  messages.py
src/review_agent/mcp/: __init__.py  server.py
src/review_agent/prompts/: rubric.py  system.py
src/review_agent/reviewers/: architecture.md  correctness.md  performance.md  security.md  style.md  tests.md
src/review_agent/skills/: loader.py
src/review_agent/tools/: __init__.py  _mypy_translate.py  _paths.py  _subprocess.py  add_finding.py  dep_audit.py  git_diff.py  glob_tool.py  grep.py  lint.py  pr_fetch.py  read_file.py  retract_finding.py  sast.py  sub_reviewer.py  test_run.py  type_check.py
tests/: test_analyzers.py  test_coordinator.py  test_dedupe.py  test_findings.py  test_formats.py  test_hooks_commands.py  test_registry_readonly.py  test_sdk_export.py  test_tools.py
