[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-agent"
version = "0.1.0"
description = "Read-only AI code review agent. Mirrors Claude Code's agentic architecture, but never edits files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Review Agent Authors" }]
dependencies = [
    "groq>=0.11.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
review = "review_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/review_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
